--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,11 @@
 
   <groupId>com.movieratingservice.app</groupId>
   <artifactId>movie-rating-service</artifactId>
+  <packaging>pom</packaging>
   <version>1.0-SNAPSHOT</version>
+  <modules>
+    <module>movie-info</module>
+  </modules>
 
   <name>movie-rating-service</name>
   <url>http://www.movierating.com</url>
