--- a/pom.xml
+++ b/pom.xml
@@ -10,6 +10,7 @@
   <version>1.0-SNAPSHOT</version>
   <modules>
     <module>movie-info</module>
+    <module>movie-rating</module>
   </modules>
 
   <name>movie-rating-service</name>
