MRS-3 Add Movie Catalog Service
This commit adds movie catalog service to finalie the entire movie service api
all modules tested and working
all issues will be closed
fixed #2
fixed #3
fixed #4
fixed #5

--- a/pom.xml
+++ b/pom.xml
@@ -11,6 +11,7 @@
   <modules>
     <module>movie-info</module>
     <module>movie-rating</module>
+    <module>movie-catalog</module>
   </modules>
 
   <name>movie-rating-service</name>
